# pyESMF

./: .gitignore  .travis.yml  CMakeLists.txt  ESMF_VERSION  MANIFEST.in  README.md  VERSIONS  conanfile.py  import.sh  pyproject.toml  setup.py  update.sh
.github/workflows/: main.yml
.travis/: deploy.sh  install.sh
8.0.1/: CMakeLists.txt  MANIFEST.in  setup.py
8.1.0_beta_snapshot_36/: CMakeLists.txt  setup.py
8.1.0_beta_snapshot_43/: ESMF_VERSION  conanfile.py  setup.py
8.1.1/: CMakeLists.txt  setup.py
8.2.1_beta_snapshot_03/: ESMF_VERSION  MANIFEST.in
8.3.0b10/: ESMF_VERSION  conanfile.py  pyproject.toml  setup.py
src/ESMF/interface/: esmfmkfile.py
